--- a/admin/pages/leader_portfoie/past_leader.html
+++ b/admin/pages/leader_portfoie/past_leader.html
@@ -294,8 +294,7 @@
                                         <input type="text" id="tname" value="name" placeholder="Tamil Name" required
                                             pattern="[\u0B80-\u0BFF]+">
 
-                                        <label for="politics_radio">English name</label>
-                                        <input type="text" id="ename" placeholder="English Name" required>
+
 
                                         <label for="politics_radio">Image URL</label>
                                         <input type="text" id="url" placeholder="Please insert your picture URL"
@@ -438,7 +437,7 @@
                 const td1 = document.createElement('td');
                 const avatar = document.createElement('img');
                 avatar.setAttribute('alt', values.name);
-                avatar.setAttribute('src', '#');
+                avatar.setAttribute('src', values.image);
                 avatar.classList.add('avatar', 'avatar-sm', 'rounded-circle', 'me-2');
                 const nameLink = document.createElement('a');
                 nameLink.setAttribute('href', '#');
@@ -453,15 +452,12 @@
 
                 // Create the third table data element for the logo and company name
                 const td3 = document.createElement('td');
-                const logo = document.createElement('img');
-                logo.setAttribute('alt', '...');
-                logo.setAttribute('src', '#');
-                logo.classList.add('avatar', 'avatar-xs', 'rounded-circle', 'me-2');
+
                 const companyLink = document.createElement('a');
                 companyLink.setAttribute('href', '#');
                 companyLink.classList.add('text-heading', 'font-semibold');
                 companyLink.textContent = values.to;
-                td3.appendChild(logo);
+
                 td3.appendChild(companyLink);
 
                 // Create the fourth table data element for the amount
@@ -539,24 +535,19 @@
 
             document.getElementById("tname").value = leader.name;
 
-            document.getElementById("ename").value = leader.name;
-
             document.getElementById("date_f").value = leader.from;
 
             document.getElementById("date_t").value = leader.to;
 
             document.getElementById("party_name").value = leader.party_name;
 
-            if (leader.movie) {
-                document.getElementById("position").value = leader.position;
+            document.getElementById("url").value = leader.image;
 
-                document.getElementById("occupation").value = leader.occupation;
+
+            if (leader.movie) {
+                document.getElementById("position").value = "முன்னாள் முதல் அமைச்சர்";
 
                 document.getElementById("description").value = leader.movie.movie_description;
-
-                document.getElementById("url").value = leader.img.sourse;
-
-                document.getElementById("state").value = leader.state;
 
                 document.getElementById("description1").value = leader.politics.politics_description;
 
@@ -579,14 +570,13 @@
         }
 
         // Function to handle form submission
-        function handleSubmit(e) {
+        async function handleSubmit(e) {
             e.preventDefault();
 
             const img_url = document.getElementById("url").value;
 
             const tamil_name = document.getElementById("tname").value;
 
-            const english_name = document.getElementById("ename").value;
 
             const position = document.getElementById("position").value;
 
@@ -627,14 +617,11 @@
             const experiance = document.getElementById("experiance").value;
 
             const past_leader_up = {
-                name: {
-                    tname: tamil_name,
-                    ename: english_name,
-                },
-                img: {
-                    source: img_url,
-                    alter: english_name,
-                },
+
+                name: tamil_name,
+
+                image: img_url,
+
                 position,
                 movie: {
                     name: movie,
@@ -664,9 +651,9 @@
 
                 status: true,
 
-                from_date,
+                from: from_date,
 
-                to_date,
+                to: to_date,
 
                 experiance,
 
@@ -686,6 +673,59 @@
                 localStorage.setItem("past_leader", JSON.stringify(past_leader));
                 alert("Governer updated successfully!");
                 loadPast()
+            }
+
+            const ministers_value1 = JSON.parse(localStorage.getItem("past_leaders_english"));
+
+            // Update leader in English JSON file
+            const index1 = ministers_value1.findIndex((leader) => leader.id === profile_leder_id);
+            if (index1 !== -1) {
+                // Translate leader data to English
+                const targetLanguage = "en";
+                const leaderdata_english = {};
+
+                for (const [key, value] of Object.entries(past_leader_up)) {
+                    if (typeof value === "string") {
+                        const translateUrl = `https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&tl=${targetLanguage}&dt=t&q=${value}`;
+                        const response = await fetch(translateUrl);
+                        const data = await response.json();
+                        const translatedText = data[0][0][0];
+                        leaderdata_english[key] = translatedText;
+                    } 
+                    else if (typeof value === "object" && value !== null) { // Check if the value is an object and not null
+                        const translatedValue = {};
+
+                        for (const [key2, value2] of Object.entries(value)) {
+                            if (key2 === "description") { // Check if the key is "description"
+
+                                const translateUrl = `https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&tl=${targetLanguage}&dt=t&q=${value2}`;
+
+                                const response = await fetch(translateUrl);
+                                const data = await response.json();
+
+                                const translatedText = data[0][0][0]; // get the translated text from the API response
+                                translatedValue[key2] = translatedText; // update the translated value object with the translated text
+                            } else {
+                                translatedValue[key2] = value2;
+
+                            }
+
+                        }
+
+                        leaderdata_english[key] = translatedValue;
+
+                    } else {
+
+                        leaderdata_english[key] = value;
+
+                    }
+                }
+
+                // Update MLA data in English JSON file
+                ministers_value1[index1] = leaderdata_english;
+                localStorage.setItem("past_leaders_english", JSON.stringify(ministers_value1));
+                alert("Leader updated successfully in English JSON file!");
+                loadPast();
             }
 
         }
