--- a/pages/manifesto/complte.html
+++ b/pages/manifesto/complte.html
@@ -126,7 +126,7 @@
       <!-- rules page start -->
 
       <div id="aggriculture" class="rules">
-        <h2># விவசாயச் சட்டங்களை திமுக ரத்து செய்யும்.</h2>
+        <h2>விவசாயச் சட்டங்களை திமுக ரத்து செய்யும்.</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -135,7 +135,7 @@
       </div>
 
       <div class="rules">
-        <h2># நலன் மற்றும் நல்வாழ்வைப் பாதுகாக்கவும்</h2>
+        <h2>நலன் மற்றும் நல்வாழ்வைப் பாதுகாக்கவும்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -144,7 +144,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># கிராமப்புற சந்தைகள்</h2>
+        <h2>கிராமப்புற சந்தைகள்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -154,7 +154,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># சிறு மற்றும் நடுத்தர விவசாயிகள் </h2>
+        <h2>சிறு மற்றும் நடுத்தர விவசாயிகள் </h2>
         <hr>
         <button>Pending</button>
         <p>
@@ -164,7 +164,7 @@
         </p>
       </div>
       <div id="water" class="rules">
-        <h2># தண்ணீர் பற்றாக்குறை</h2>
+        <h2>தண்ணீர் பற்றாக்குறை</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -174,7 +174,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># நீர்நிலைகளை சீரமைக்க நடவடிக்கை</h2>
+        <h2>நீர்நிலைகளை சீரமைக்க நடவடிக்கை</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -183,7 +183,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># தனி ஆணையங்கள் உருவாக்கப்படும்</h2>
+        <h2>தனி ஆணையங்கள் உருவாக்கப்படும்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -191,7 +191,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># தரைப் பாலங்களும் உயர்மட்டப் பாலங்களாக மாற்றப்படும்.</h2>
+        <h2>தரைப் பாலங்களும் உயர்மட்டப் பாலங்களாக மாற்றப்படும்.</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -202,7 +202,7 @@
 
       <div class="rules">
         <h2>
-          # சலுகைகளையும் பெறுவதற்கு தேவையான நடவடிக்கைகள்</h2>
+          சலுகைகளையும் பெறுவதற்கு தேவையான நடவடிக்கைகள்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -210,7 +210,7 @@
         </p>
       </div>
       <div id="fishers" class="rules">
-        <h2># இலங்கை ராணுவத்தால் தாக்குதல்</h2>
+        <h2>இலங்கை ராணுவத்தால் தாக்குதல்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -220,7 +220,7 @@
       </div>
 
       <div class="rules">
-        <h2># மீனவர்களுக்கு வீடுகள்</h2>
+        <h2>மீனவர்களுக்கு வீடுகள்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -229,7 +229,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># குறைதீர்க்கும் கூட்டம் </h2>
+        <h2>குறைதீர்க்கும் கூட்டம் </h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -239,7 +239,7 @@
       </div>
 
       <div id="education" class="rules">
-        <h2># டேப்லெட் சாதனங்களை அரசு வழங்கும். </h2>
+        <h2>டேப்லெட் சாதனங்களை அரசு வழங்கும். </h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -247,7 +247,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># மருத்துவக் கல்லூரிகளை நிறுவும்.</h2>
+        <h2>மருத்துவக் கல்லூரிகளை நிறுவும்.</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -257,7 +257,7 @@
       </div>
 
       <div id="education" class="rules">
-        <h2># வெளிநாட்டு மொழிப் படிப்புகளை வழங்க </h2>
+        <h2>வெளிநாட்டு மொழிப் படிப்புகளை வழங்க </h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -266,7 +266,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># மாணவர்களுக்குப் பயிற்சி</h2>
+        <h2>மாணவர்களுக்குப் பயிற்சி</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -275,7 +275,7 @@
       </div>
 
       <div id="employment" class="rules">
-        <h2># 50 லட்சம் வேலைகள் வழங்குவதற்கான ஒரு பெரிய திட்டம்</h2>
+        <h2>50 லட்சம் வேலைகள் வழங்குவதற்கான ஒரு பெரிய திட்டம்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -285,7 +285,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># 3.50 இளைஞர்கள் நியமிக்கப்படுவார்கள்.</h2>
+        <h2>3.50 இளைஞர்கள் நியமிக்கப்படுவார்கள்.</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -295,7 +295,7 @@
       </div>
 
       <div class="rules">
-        <h2># திறன் பயிற்சிக்கான உரிமைச் சட்டம்</h2>
+        <h2>திறன் பயிற்சிக்கான உரிமைச் சட்டம்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -305,7 +305,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># ஊழியர்களாக நியமிக்கப்படுவார்கள்.</h2>
+        <h2>ஊழியர்களாக நியமிக்கப்படுவார்கள்.</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -316,7 +316,7 @@
       </div>
 
       <div id="electricity" class="rules">
-        <h2># சர்க்கரை ஆலைகள் மின்சாரம் தயாரிக்க ஊக்குவிக்கப்படும்</h2>
+        <h2>சர்க்கரை ஆலைகள் மின்சாரம் தயாரிக்க ஊக்குவிக்கப்படும்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -326,7 +326,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># உயிரி எரிபொருள் உற்பத்தி</h2>
+        <h2>உயிரி எரிபொருள் உற்பத்தி</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -336,7 +336,7 @@
       </div>
 
       <div class="rules">
-        <h2># மின்சார விரயத்தைக் குறைக்கவும்</h2>
+        <h2>மின்சார விரயத்தைக் குறைக்கவும்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -346,7 +346,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># அனைத்து ரேஷன் கார்டுதாரர்களுக்கும் மின்சாரம்</h2>
+        <h2>அனைத்து ரேஷன் கார்டுதாரர்களுக்கும் மின்சாரம்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -356,7 +356,7 @@
       </div>
 
       <div id="transport" class="rules">
-        <h2># தனியார் பேருந்துகளில் GPS கண்காணிப்பு</h2>
+        <h2>தனியார் பேருந்துகளில் GPS கண்காணிப்பு</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -365,7 +365,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># ரோப்வே சேவைகள் வழங்கப்படும்.</h2>
+        <h2>ரோப்வே சேவைகள் வழங்கப்படும்.</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -375,7 +375,7 @@
       </div>
 
       <div class="rules">
-        <h2># பெண் பயணிகளுக்கு சிறந்த அணுகலை எளிதாக்கும்.</h2>
+        <h2>பெண் பயணிகளுக்கு சிறந்த அணுகலை எளிதாக்கும்.</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -384,7 +384,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># தேசிய நெடுஞ்சாலை</h2>
+        <h2>தேசிய நெடுஞ்சாலை</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -394,7 +394,7 @@
       </div>
 
       <div id="disabilities" class="rules">
-        <h2># மாற்றுத்திறனாளிகளுக்கான போக்குவரத்து</h2>
+        <h2>மாற்றுத்திறனாளிகளுக்கான போக்குவரத்து</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -404,7 +404,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># அவர்கள் அணுகுவதற்கு வசதியாக </h2>
+        <h2>அவர்கள் அணுகுவதற்கு வசதியாக </h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -414,7 +414,7 @@
       </div>
 
       <div id="woman" class="rules">
-        <h2># பெண்கள் விடுதிகள் </h2>
+        <h2>பெண்கள் விடுதிகள் </h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -433,7 +433,7 @@
       </div>
 
       <div class="rules">
-        <h2># திருமண உதவித் திட்டம்</h2>
+        <h2>திருமண உதவித் திட்டம்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -451,7 +451,7 @@
       </div>
 
       <div id="citizens" class="rules">
-        <h2># உதவித்தொகை</h2>
+        <h2>உதவித்தொகை</h2>
         <hr>
         <button>Pending</button>
         <p>
@@ -461,7 +461,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># வசதிகள் வழங்கப்படும்</h2>
+        <h2>வசதிகள் வழங்கப்படும்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -471,7 +471,7 @@
       </div>
 
       <div class="rules">
-        <h2># முதியோர் பிரிவுகள்</h2>
+        <h2>முதியோர் பிரிவுகள்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -480,7 +480,7 @@
         </p>
       </div>
       <div id="law" class="rules">
-        <h2># வழக்கறிஞர்களுக்கு அலுவலக அறைகள் </h2>
+        <h2>வழக்கறிஞர்களுக்கு அலுவலக அறைகள் </h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -490,7 +490,7 @@
       </div>
 
       <div class="rules">
-        <h2># பெண்களுக்கு எதிரான பாலியல் குற்றங்கள்</h2>
+        <h2>பெண்களுக்கு எதிரான பாலியல் குற்றங்கள்</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
@@ -499,7 +499,7 @@
         </p>
       </div>
       <div class="rules">
-        <h2># ரகசியமான முறையில் பராமரிக்கப்படும்.</h2>
+        <h2>ரகசியமான முறையில் பராமரிக்கப்படும்.</h2>
         <hr>
         <button>நிறைவு</button>
         <p>
