--- a/pages/past leaders/past leaders.html
+++ b/pages/past leaders/past leaders.html
@@ -61,10 +61,10 @@
 
                 <th scope="col">வா.எண்</th>
                 <th scope="col">
-                    முதல்வர்<button id="sortName">Sort by Name</button>
+                    முதல்வர்<button id="sortName"><i class="fa fa-sort"></i></button>
                 </th>
                 <th class="date" scope="col">
-                    இருந்து<button id="sort-date">Sort by date</button>
+                    இருந்து<button id="sort-date"><i class="fa fa-sort"></i></button>
                 </th>
                 <th class="date" scope="col">வரை</th>
 
@@ -75,10 +75,10 @@
 
                 <th scope="col">No</th>
                 <th scope="col">
-Chief Minister<button id="sortName">Sort by Name</button>
+                    Chief Minister<button id="sortName"><i class="fa fa-sort"></i></button>
                 </th>
                 <th class="date" scope="col">
-From<button id="sort-date">Sort by date</button>
+                    From<button id="sort-date"><i class="fa fa-sort"></i></button>
                 </th>
                 <th class="date" scope="col">to</th>
 
