--- a/pages/portfolio/parties-profile.html
+++ b/pages/portfolio/parties-profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../../assets/css/main.css" rel="stylesheet">
+    <link href="../../assets/css/parties.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="../../assets/css/responsive.css"> -->
     <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg">
     <link rel="stylesheet" href="../../assets/css/footer.css">
