--- a/admin/pages/manifesto/manifesto_listpage.html
+++ b/admin/pages/manifesto/manifesto_listpage.html
@@ -1,17 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-
     <title>Document</title>
-
+    <link rel="stylesheet" href="../../assets/css/admin.css">
     <style>
         p.title {
             text-align: center;
@@ -24,14 +20,14 @@
             font-size: 55px;
         }
 
-        p.remarks,
+        /* p.remarks,
         a {
             text-align: center;
             margin-top: 100px;
             color: #FFFFFF;
-        }
+        } */
 
-        .container {
+        .container1 {
             width: 100%;
             max-width: 700px;
             min-width: 300px;
@@ -85,206 +81,246 @@
             color: #333333;
         }
 
-        /*form*/
+        /* form */
 
-        body {
-            background-color: #DDF0FF;
-            color: #586791;
-        }
-
-        h1 {
-            color: #55648E;
-            font-weight: 300;
-            text-align: center;
-            font-size: 35px;
-        }
-
-        select {
-            width: 50%;
-            background-color: #586791;
-            letter-spacing: .04em;
-            padding: 10px 30px;
-            border-radius: 8px;
-            border: none;
-            -webkit-box-shadow: 2px 1px 39px 16px rgba(198, 225, 244, 0.86);
-            -moz-box-shadow: 2px 1px 39px 16px rgba(198, 225, 244, 0.86);
-            box-shadow: 2px 1px 39px 16px rgba(198, 225, 244, 0.86);
-        }
-
-        option {
-            padding: 20px 30px;
-        }
-
-        .dropdown {
-            margin: 40px 20px;
-        }
-
-        input {
-            width: 100%;
-            margin: 10px 0 40px 0;
-            background: transparent;
-            border: none;
-            border-bottom: 1px solid #C2DCF3;
-            color: #ABC7E8;
-        }
-
-        input:focus {
-            border-bottom: 1px solid #596790;
-            outline: none;
-            color: #596790;
-        }
-
-        .submit {
-            border: none;
-            background-color: #ADCAE8;
-            color: #E4EDF7;
-            border-radius: 360px;
-            height: 50px;
-            transition: background 0.3s;
-            -webkit-transition: background 0.3s;
-        }
-
-        .close-what {
-            color: #586790;
-            font-size: 50px;
-            font-weight: 100;
-            text-align: right;
-            padding-right: 19px;
-            line-height: 69px;
-            height: 85px;
-            width: 85px;
-            background-color: #C8E6FE;
-            position: fixed;
-            top: 0;
-            right: 0;
-            border-radius: 0px 0px 0px 360px;
-        }
-
-        .close-what:hover {
-            color: white;
-            cursor: pointer;
-        }
-
-        .submit:hover {
-            background: white;
-            color: #5B6B93;
-            cursor: pointer;
-        }
-
-        .popup {
-            position: fixed;
-            z-index: 10;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0 20%;
-
-        }
-
-        /* Popup content */
-        .popup-content {
-            background-color: #f9f9f9;
+        .container1 {
+            max-width: 800px;
+            margin: 0 auto;
             padding: 20px;
+            border: 1px solid #ddd;
             border-radius: 5px;
-
+            background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
         }
 
-        /* Close button */
+        .container1 h1 {
+            font-size: 26px;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        .container1 .row {
+            display: flex;
+            flex-wrap: wrap;
+            margin: 0 -10px;
+        }
+
+        .container1 .col-sm-6 {
+            width: 50%;
+            padding: 0 10px;
+            margin-bottom: 20px;
+        }
+
+        .container1 label {
+            display: block;
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .container1 input[type="text"],
+        .container1 select {
+            width: 300px;
+            height: 50px;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+            background-color: #fff;
+        }
+
+        .container1 input[type="submit"] {
+            display: block;
+            width: 100%;
+            height: 50px;
+            margin-top: 20px;
+            font-size: 18px;
+            font-weight: bold;
+            color: #fff;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .container1 input[type="submit"]:hover {
+            background-color: #0062cc;
+        }
+
+        .container1 select {
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='4' viewBox='0 0 8 4'%3E%3Cpath fill='%23000' d='M0 0l4 4 4-4z'/%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-position: right 10px center;
+            background-size: 8px 4px;
+            padding-right: 30px;
+        }
+
+        .container1 select:focus {
+            outline: none;
+            box-shadow: none;
+        }
+
+        .container1 input:required:invalid {
+            border-color: #f44336;
+        }
+
+        .container1 input:required:valid {
+            border-color: #4caf50;
+        }
     </style>
+
 </head>
 
 <body>
 
-    <div class="container">
+    <!-- Dashboard -->
+    <div class="d-flex flex-column flex-lg-row h-lg-full bg-surface-secondary" id="nave_side">
+        <!-- Vertical Navbar -->
 
-        <!-- <div id="accordion-1">
-            <div class="head">
-                <h2>1. Simple Accordion</h2>
-                <i class="fas fa-angle-down arrow"></i>
-            </div>
-            <div class="content">
-                <p>An accordion is used to show and hide content. It can be usuall=rtyuiopcvbnm,.section.</p>
-                <button>complete</button>
-            </div>
-            
-        </div> -->
-
-    </div>
-    <div class="container popup" id="menifesto_popup" style="display: none;">
-        <h1>This is an Menifesto create page</h1>
-        <div class="popup-content">
-
-            <div class="row">
-                <div class="col-sm-6">
-                    <form id="menifesto_form">
-                        Title of Menifesto:<br>
-
-                        <input type="text" id="menifest_title" placeholder="Title of Menifesto">
-
+        <!-- Main content -->
+        <div class="h-screen flex-grow-1 overflow-y-lg-auto">
+            <!-- Header -->
+            <header class="bg-surface-primary border-bottom pt-6">
+                <div class="container-fluid">
+                    <div class="mb-npx">
+                        <div class="row align-items-center">
+                            <div class="col-sm-6 col-12 mb-4 mb-sm-0">
+                                <!-- Title -->
+                                <h1 class="h2 mb-0 ls-tight">Application</h1>
+                            </div>
+                            <!-- Actions -->
+                            <div class="col-sm-6 col-12 text-sm-end">
+                                <div class="mx-n1">
+                                    <a href="pages/leader_portfoie/create_leaders/politicin_create.html"
+                                        class="btn d-inline-flex btn-sm btn-primary mx-1" id="direct_to_create">
+                                        <span class=" pe-2">
+                                            <i class="bi bi-plus"></i>
+                                        </span>
+                                        <span>Create</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Nav -->
+                        <ul class="nav nav-tabs mt-4 overflow-x border-0">
+                            <li class="nav-item ">
+                                <a href="#" class="nav-link active">All files</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link font-regular">Shared</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link font-regular">File requests</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+            </header>
+            <!-- Main -->
+            <main class="py-6 bg-surface-secondary">
+                <div class="container-fluid">
+                    <!-- Card stats -->
 
-                <div class="col-sm-6">
+                    <div class="card shadow border-0 mb-7">
+                        <div class="card-header">
+                            <h5 class="mb-0">Pages</h5>
+                        </div>
+                        <div class="table-responsive">
+                            <table class="table table-hover table-nowrap">
+                                <thead class="thead-light">
+                                    <tr>
+                                        <th scope="col">date</th>
+                                        <th scope="col">list</th>
+                                        <th scope="col">list type</th>
+                                        <th scope="col">status</th>
+                                        <th scope="col">status</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
 
-                    stage of Menifesto:<br>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="container">
 
-                    <input type="text" id="status_stage" placeholder="the status of the stage">
 
+                        </div>
+                        <div class="container1">
+                            <h1>This is an Manifesto create page</h1>
+
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <form id="menifesto_form">
+                                        Title of Menifesto:<br>
+                                        <input type="text" id="manifesto_title" placeholder="Title of Menifesto"
+                                            required>
+
+
+                                </div>
+                                <div class="col-sm-6">
+                                    stage of Menifesto:<br>
+                                    <input type="text" id="status_stage" placeholder="the status of the stage" required>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    category:
+                                    <select class="form-select" aria-label="Default select example" id="category"
+                                        required pattern="[A-Za-z]">
+                                        <option selected>Enter your opinion</option>
+                                        <option value="aggriculture">aggriculture</option>
+                                        <option value="water">water</option>
+                                        <option value="fishers">fishers</option>
+                                        <option value="education">education</option>
+                                        <option value="employment">employment</option>
+                                        <option value="electricity">electricity</option>
+                                        <option value="transport">transport</option>
+                                        <option value="disabilities">disabilities</option>
+                                        <option value="woman">woman</option>
+                                        <option value="law">law</option>
+
+                                    </select>
+                                </div>
+                                <div class="col-sm-6">
+                                    status:
+                                    <select class="form-select" aria-label="Default select example"
+                                        id="manifesto-status" required pattern="[A-Za-z]">
+                                        <option selected>Enter your opinion</option>
+                                        <option value="complete">complte</option>
+                                        <option value="bending">bending</option>
+                                    </select>
+
+                                </div>
+                            </div>
+                            <div class="row">
+
+                                <div class="col-sm-6">
+                                    <input type="submit" value="Submit" class="submit">
+
+                                    </form>
+
+                                </div>
+
+                                <div class="close-what" id="closeBtn">&times;</div>
+                            </div>
+
+                        </div>
+
+                    </div>
                 </div>
-
-            </div>
-
-            <div class="row">
-
-                <div class="col-sm-6">
-
-                    category:<br>
-
-                    <input type="text" id="catogery" style="color: black;" placeholder="catogery EX: agriculture">
-
-                </div>
-
-                <div class="col-sm-6">
-
-                    status:
-
-                    <select class="form-select" aria-label="Default select example" id="mainfesto-status">
-
-                        <option selected>Enter your opinion</option>
-
-                        <option value="complete">complte</option>
-
-                        <option value="bending">bending</option>
-
-                    </select>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-                </div>
-
-            </div>
-
-            <div class="row">
-
-                <div class="col-sm-6">
-                    <input type="submit" value="Submit" class="submit">
-
-                    </form>
-                </div>
-            </div>
-            <div class="close-what" id="closeBtn">&times;</div>
-
+            </main>
         </div>
     </div>
-    <script src="../../assets/js/manifesto_update.js"> </script>
 
+    <script src="../../assets/js/manifesto_update.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../admin_main.js"></script>
 </body>
 
 </html>
