--- a/pages/manifesto/total_manifest.html
+++ b/pages/manifesto/total_manifest.html
@@ -53,7 +53,6 @@
         /* accordion-1 */
         #accordion-1 {
             position: relative;
-            box-shadow: 0px 1px 7px #DBDBDB;
         }
 
         #accordion-1 .head {
@@ -82,6 +81,8 @@
         #accordion-1 .head:hover,
         #accordion-1 .active {
             background-image: linear-gradient(to left, #8ae479, #00d4ab, #00bcdb, #009dee, #4475d8);
+            border-radius: 7px;
+            color: #fff;
         }
 
         #accordion-1 .arrow-animate {
@@ -99,6 +100,7 @@
 </head>
 
 <body>
+    
 
     <div class="container_card">
 
@@ -905,7 +907,7 @@
     },
 
     {
-        topic: "14.ஈரோடு மாவட்டம்",
+        topic: "ஈரோடு மாவட்டம்",
         li: [
 
             "1.ஈரோடு, பெருந்துறையில் கழிவுநீர் சுத்திகரிப்பு நிலையம் அமைக்கப்படும்",
